--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
+    "@prisma/client": "^5.21.1",
     "@tailwindcss/forms": "^0.5.9",
     "next": "15.0.1",
+    "prisma": "^5.21.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20",
