--- a/package.json
+++ b/package.json
@@ -11,22 +11,25 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
-    "@prisma/client": "^5.21.1",
     "@tailwindcss/forms": "^0.5.9",
     "next": "15.0.1",
-    "prisma": "^5.21.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@prisma/client": "^5.21.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
+    "jest": "^29.7.0",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
   }
 }
